turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	if(getcouleursol()==Color.white){
		setCouleurBrosse(Color.black)
		baisseBrosse
		leveBrosse
		droite
		avance
	}
	else{
		setCouleurBrosse(Color.white)
		baisseBrosse
		leveBrosse
		gauche
		avance	
	}
}
